--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "multer": "^1.3.0",
     "path": "^0.12.7",
+    "quill": "^1.3.6",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
