--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mongoose": "^5.0.12",
     "multer": "^1.3.0",
+    "ngx-quill-editor": "^2.2.2",
     "path": "^0.12.7",
-    "quill": "^1.3.6",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
